bug fix
Using the icon font distorted the url paths in the search bar.

Suggestion: separate search & nav bars out to allow the navbar to do more than just show the current url [make it actually navigable in the future]).

--- a/index.css
+++ b/index.css
@@ -89,6 +89,8 @@ header::after,
 .search
 {
 	background:transparent;
+	/*icon font distorts url text*/
+	font-family:Arial, Helvetica, sans-serif;
 	flex:1 1 auto;
 	padding:0 var(--margin);
 	opacity:0.5;
